# PluginQGis-LPOData

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .qgis-plugin-ci  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.html  README.md  README.txt  __init__.py  carte_par_especes.py  common_functions.py  custom_widgets.py  extract_data.py  extract_data_observers.py  format_csv.py  generic_classes.py  histogram.py  joke.py  metadata.txt  pb_tool.cfg  plugin_qgis_lpo.code-workspace  pyproject.toml  qgis_processing_postgis.py  requirements-dev.in  requirements-dev.txt  scripts_lpo.py  scripts_lpo_provider.py  setup.cfg  species_map.py  startup.py  state_of_knowledge.py  summary_map.py  summary_table.py  summary_table_per_species.py  summary_table_per_species_lpoaura.py  summary_table_per_time_interval.py  summary_table_per_year.py
.github/: dependabot.yml  labeler.yml
config/: mv_c_cor_vn_taxref.sql  mv_source.sql  mv_statuts.sql  mv_taxonomy.sql  mv_taxonomy_lpoaura.sql  startup.py  startup_lpoaura.py  synthese.sql  t_parameters.sql  v_c_observations.sql  v_c_observations_light.sql
docs/: conf.py  development.md  index.md
linters/: pylintrc
plugin_qgis_lpo/: __about__.py  __init__.py  metadata.txt  plugin.py  plugin_main.py
plugin_qgis_lpo/qgis_plugin_tools/: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  __init__.py  requirements-dev.in  requirements-dev.txt  setup.cfg  setup.py
plugin_qgis_lpo/qgis_plugin_tools/.github/workflows/: preview.yml  release.yml  tests.yml
plugin_qgis_lpo/qgis_plugin_tools/docs/: usage.md
plugin_qgis_lpo/qgis_plugin_tools/infrastructure/: __init__.py  debugging.py  plugin_maker.py
plugin_qgis_lpo/qgis_plugin_tools/resources/ui/: progress_dialog.ui
plugin_qgis_lpo/qgis_plugin_tools/test/: conftest.py  test_decorations.py  test_i18n.py  test_init.py  test_layers.py  test_logging.py  test_misc_utils.py  test_network.py  test_raster_layers.py  test_setings.py  test_tasks.py
plugin_qgis_lpo/qgis_plugin_tools/test/fixtures/: file.xml
plugin_qgis_lpo/qgis_plugin_tools/test/ui/: test_progress_dialog.py
plugin_qgis_lpo/qgis_plugin_tools/testing/: utilities.py
plugin_qgis_lpo/qgis_plugin_tools/tools/: algorithm_processing.py  custom_logging.py  decorations.py  exceptions.py  fields.py  ghost_layers.py  i18n.py  layers.py  logger_processing.py  messages.py  misc_utils.py  network.py  raster_layers.py  resources.py  settings.py  tasks.py  ui.py  version.py
plugin_qgis_lpo/qgis_plugin_tools/widgets/: grid_layout_utils.py  json_editor.py  list_fields_selection.py  list_layers_selection.py  progress_dialog.py  selectable_combobox.py
requirements/: development.txt  documentation.txt  testing.txt
scripts/: mv_statuts.sql
styles/: bird_reproduction.qml  reproduction.qml
test/: test_plugin.py
tmp_old_generic/: common_functions.py  extract_data.py  state_of_knowledge.py  (+1 more)
(+59 files in other folders)
