[tool.poetry]
name = "plugin-qgis-lpo"
version = "2.2.0-dev"
description = "Scripts de la LPO pour l'analyse de données"
authors = ["Collectif LPOAuRA <webadmin.aura@lpo.fr>"]
license = "AGPL-V3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5"
black = "^23.12.1"
isort = "^5.13.2"
mypy = "^1.8.0"
flake8 = "^7.0.0"
flake8-bugbear = "^23.12.2"
pep8-naming = "^0.13.3"
flake8-annotations = "^3.0.1"
flake8-qgis = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
