[flake8]
# Black compatible values https://black.readthedocs.io/en/stable/compatible_configs.html#flake8
max-line-length = 88
per-file-ignores =
    test/*:ANN001,ANN201
extend-ignore =
    # E203 whitespace before ':'
    E203,
    # ANN101 Missing type annotation for self in method
    ANN101

[isort]
# Black compatible values for isort https://black.readthedocs.io/en/stable/compatible_configs.html#isort
profile = black
multi_line_output = 3

[metadata]
name = qgis_plugin_tools
version = 0.4.0
author = 3Liz, Gispo Ltd.
author_email = info@gispo.fi
maintainer = Gispo Ltd.
maintainer_email = info@gispo.fi
description = A collection of helpful tools and widgets to aid QGIS plugin tool development
long_description = file: README.md
long_description_content_type = text/markdown
keywords = qgis,QGIS,PyQGIS
url = https://github.com/GispoCoding/qgis_plugin_tools
license = GNU GPL v2.0

# https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers =
     Development Status :: 4 - Beta
     Intended Audience :: Developers
     Topic :: Software Development :: Libraries :: Python Modules
     Programming Language :: Python
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.5
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
     Programming Language :: Python :: 3 :: Only
     Programming Language :: Python :: Implementation :: CPython
     Programming Language :: Python :: Implementation :: PyPy
     Operating System :: OS Independent
     License :: OSI Approved :: GNU General Public License v2 (GPLv2)

[options]
python_requires = >=3.5
packages =
    qgis_plugin_tools
    qgis_plugin_tools.infrastructure
    qgis_plugin_tools.resources
    qgis_plugin_tools.resources.ui
    qgis_plugin_tools.testing
    qgis_plugin_tools.tools
    qgis_plugin_tools.widgets
package_dir =
    qgis_plugin_tools = .

# due to .ui files actually needed on disk when using __file__ relative paths?
zip_safe = False

[options.package_data]
* =
    py.typed
    *.ui
